<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/action_home" />
        <item
            android:visible="false"
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_history_black_24dp"
            android:title="History" />
        <item
            android:visible="false"
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_contact_mail_black_24dp"
            android:title="Contact Us" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/action_settings" />
    </group>

    <item android:title="">
        <menu>
            <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/action_logout" />

            <item
                android:id="@+id/nav_exit"
                android:icon="@drawable/ic_exit"
                android:title="@string/action_exit" />
        </menu>
    </item>

</menu>
