<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/fragment"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:textStyle="bold"
        android:textSize="@dimen/_23sdp"
        android:textColor="@color/colorAccent"
        android:layout_margin="@dimen/_20sdp"
        android:layout_centerHorizontal="true"
        android:text="@string/txt_login_to_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:padding="@dimen/_20sdp"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!--car registraiton number-->
        <RelativeLayout
            android:background="@drawable/input_rounded"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp">
            <!--icon-->
            <ImageView
                android:padding="@dimen/_5sdp"
                android:background="@color/colorAccent"
                android:layout_centerVertical="true"
                android:id="@+id/ic_car"
                android:src="@drawable/ic_car"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="match_parent" />
            <!--input-->
            <EditText
                android:background="@null"
                android:maxLength="32"
                android:maxLines="1"
                android:id="@+id/et_car_reg"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/_5sdp"
                android:hint="@string/txt_enter_username"
                android:layout_toRightOf="@id/ic_car"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </RelativeLayout>
        <!--phone number-->
        <RelativeLayout
            android:background="@drawable/input_rounded"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp">
            <!--icon-->
            <ImageView
                android:layout_centerVertical="true"
                android:id="@+id/ic_fiber"
                android:src="@drawable/ic_phone"
                android:padding="@dimen/_5sdp"
                android:background="@color/colorAccent"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="match_parent" />
            <!--input-->
            <EditText
                android:background="@null"
                android:maxLength="10"
                android:maxLines="1"
                android:id="@+id/et_phone"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/_5sdp"
                android:hint="@string/txt_enter_password"
                android:layout_toRightOf="@id/ic_fiber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </RelativeLayout>

        <TextView
            android:layout_margin="@dimen/_20sdp"
            android:text="@string/txt_code_will_be_sent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <!--loign button-->
    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:src="@drawable/ic_arrow_forward"
        app:fabSize="normal"
        android:id="@+id/btn_submit"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/_10sdp"
        android:layout_height="wrap_content" />

</RelativeLayout>