<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:background="@color/colorBottomSheet"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:behavior_hideable="true"
    app:behavior_peekHeight="80dp"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <LinearLayout
        android:id="@+id/welcome"
        android:layout_margin="@dimen/_20sdp"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="@dimen/_18sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"/>
        <TextView
            android:textSize="@dimen/_17sdp"
            android:layout_marginLeft="@dimen/_3sdp"
            android:text="Adil"
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <!--ride details layout-->
    <LinearLayout
        android:id="@+id/layout_ride_details"
        android:paddingLeft="@dimen/_30sdp"
        android:paddingRight="@dimen/_20sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:orientation="vertical"
        android:layout_below="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textColor="@color/colorDirtyBlack"
            android:textSize="@dimen/_13sdp"
            android:layout_marginBottom="@dimen/_7sdp"
            android:text="@string/your_nearest_assignment_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <LinearLayout
            android:layout_marginLeft="@dimen/_10sdp"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <!--day-->
            <LinearLayout
                android:layout_marginBottom="@dimen/_3sdp"
                android:id="@+id/layout_day"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:textColor="@color/colorDirtyBlack"
                    android:textSize="@dimen/_13sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/day"/>
                <TextView
                    android:layout_marginLeft="@dimen/_3sdp"
                    android:text="Monday"
                    android:id="@+id/tv_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <!--time-->
            <LinearLayout
                android:layout_marginBottom="@dimen/_3sdp"
                android:id="@+id/layout_time"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:textColor="@color/colorDirtyBlack"
                    android:textSize="@dimen/_13sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time"/>
                <TextView
                    android:layout_marginLeft="@dimen/_3sdp"
                    android:text="03 AM"
                    android:id="@+id/tv_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <!--location-->
            <LinearLayout
                android:layout_marginBottom="@dimen/_3sdp"
                android:id="@+id/layout_location"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:textColor="@color/colorDirtyBlack"
                    android:textSize="@dimen/_13sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location"/>
                <TextView
                    android:layout_marginLeft="@dimen/_3sdp"
                    android:text="Hiper star"
                    android:id="@+id/tv_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <!--line number-->
            <LinearLayout
                android:layout_marginBottom="@dimen/_3sdp"
                android:id="@+id/layout_line_num"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:textColor="@color/colorDirtyBlack"
                    android:textSize="@dimen/_13sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/line_number"/>
                <TextView
                    android:layout_marginLeft="@dimen/_3sdp"
                    android:text="20"
                    android:id="@+id/tv_line_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <!--client-->
            <LinearLayout
                android:layout_marginBottom="@dimen/_3sdp"
                android:id="@+id/layout_client"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:textColor="@color/colorDirtyBlack"
                    android:textSize="@dimen/_13sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/client"/>
                <TextView
                    android:layout_marginLeft="@dimen/_3sdp"
                    android:text="Waqas Akram"
                    android:id="@+id/tv_client"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <!--questainair layout-->
    <LinearLayout
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_30sdp"
        android:orientation="vertical"
        android:layout_below="@id/layout_ride_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_marginRight="@dimen/_5sdp"
            android:orientation="horizontal"
            android:layout_gravity="right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:textAlignment="center"
                android:text="@string/txt_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/_10sdp"/>
            <TextView
                android:textAlignment="center"
                android:text="@string/txt_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <!--your name-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/_50sdp"
                android:id="@+id/tv_confirm_name"
                android:text="asdfsa sa fa sfd sa fda sfd as dfas fd as f asd fas fd asdf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <CheckBox
                android:visibility="gone"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:id="@+id/cb_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <RadioGroup
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:orientation="horizontal"
                android:id="@+id/rg_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/rb_name_yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <RadioButton
                    android:id="@+id/rb_name_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RadioGroup>
        </RelativeLayout>

        <!--fuel-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/_30sdp"
                android:id="@+id/tv_confirm_fuel"
                android:text="@string/confirm_fuel_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <CheckBox
                android:visibility="gone"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:id="@+id/cb_fuel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <RadioGroup
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:orientation="horizontal"
                android:id="@+id/rg_fuel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/rb_fuel_yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <RadioButton
                    android:id="@+id/rb_fuel_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RadioGroup>
        </RelativeLayout>

        <!--vehicle clean-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/_30sdp"
                android:id="@+id/tv_confirm_vehicle_clean"
                android:text="@string/confirm_vehicle_clean"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <CheckBox
                android:visibility="gone"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:id="@+id/cb_vehicle_clean"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <RadioGroup
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:orientation="horizontal"
                android:id="@+id/rg_vehicle_clean"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/rb_vehicle_yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <RadioButton
                    android:id="@+id/rb_vehicle_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RadioGroup>
        </RelativeLayout>

        <!--previous clinet is ok-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/_40sdp"
                android:id="@+id/tv_confirm_previous_client"
                android:text="@string/confirm_previous_client"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <CheckBox
                android:visibility="gone"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:id="@+id/cb_previous_client"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <RadioGroup
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:orientation="horizontal"
                android:id="@+id/rg_previous_client"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/rb_client_yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <RadioButton
                    android:id="@+id/rb_client_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RadioGroup>
        </RelativeLayout>
    </LinearLayout>

    <!--submit-->
    <android.support.design.widget.FloatingActionButton
        app:fabSize="normal"
        android:id="@+id/btn_submit_ques"
        android:layout_margin="@dimen/_10sdp"
        android:layout_gravity="right"
        android:src="@drawable/ic_arrow_forward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>