<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_margin="@dimen/_20sdp"
        android:layout_alignParentTop="true"
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_height="wrap_content">
    <!--firstname-->
        <TextView
            android:text="@string/label_firstname"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    <TextView
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:id="@+id/tv_firstname"
        android:text="Adil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!--lastname-->
        <TextView
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/label_lastname"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    <TextView
        android:text="Farooq"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:id="@+id/tv_lastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    </LinearLayout>

    <!--date-->
    <TextView
        android:text="02/23/0987"
        android:textStyle="bold"
        android:textSize="@dimen/_15sdp"
        android:layout_margin="@dimen/_20sdp"
        android:layout_alignParentRight="true"
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <!--suborganization name-->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">
        <TextView
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:text="@string/suborganization_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    <TextView
        android:layout_marginTop="@dimen/_3sdp"
        android:layout_gravity="center_horizontal"
        android:text="Lahore"
        android:id="@+id/tv_suborg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    </LinearLayout>

    <ImageView
        android:visibility="gone"
        android:id="@+id/btn_logout"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:src="@drawable/logout"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/_10sdp"/>
    
</RelativeLayout>